WIP: Code generation for data storage and expression evaluation.